--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <body id="hpPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 	
 	<header>
-		<nav id="hpMainNav" class="navbar navbar-inverse navbar-dark navbar-expand-lg navbar-fixed-top">
+		<nav id="hpMainNav" class="navbar navbar-inverse navbar-dark navbar-expand-lg">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#hpPage">HP Serviços e Manutenção</a>
+					<a class="navbar-brand link-img-logo" href="#hpPage"><img id="logo-hp" src="img/capa/logo-hp.png" class="img-logo" alt="Logo HP Drywall"></a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hpNavbar">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -69,27 +69,27 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 				<figure class="item active">
-					<img src="img/hp-loja1.jpg" class="img-responsive" width="100%" alt="Loja 1 HP">
-					<figcaption class="carousel-caption">
+					<img src="img/capa/capa1.png" class="img-responsive" width="100%" alt="Loja 1 HP">
+					<!--<figcaption class="carousel-caption">
 						<div class="intro-saudacao">Bem Vindo a nossa Empresa</div>
 						<div class="saudacao-cabecalho text-uppercase">É um prazer conhece-lo</div>
-					</figcaption>
+					</figcaption>-->
 				</figure>
 				
 				<figure class="item">
-					<img src="img/4ijpy7eadqw6.jpg" class="img-responsive" width="100%" alt="Serviços HP">
-					<figcaption class="carousel-caption">
+					<img src="img/capa/capa2.png" class="img-responsive" width="100%" alt="Serviços HP">
+					<!--<figcaption class="carousel-caption">
 						<div class="intro-saudacao">Bem Vindo a nossa Empresa</div>
 						<div class="saudacao-cabecalho text-uppercase">É um prazer conhece-lo</div>
-					</figcaption>
+					</figcaption>-->
 				</figure>
 
 				<figure class="item">
-					<img src="img/hp-equipe1.jpg" class="img-responsive" width="100%" alt="Equipe HP">
-					<figcaption class="carousel-caption">
+					<img src="img/capa/capa3.png" class="img-responsive" width="100%" alt="Equipe HP">
+					<!--<figcaption class="carousel-caption">
 						<div class="intro-saudacao">Bem Vindo a nossa Empresa</div>
 						<div class="saudacao-cabecalho text-uppercase">É um prazer conhece-lo</div>
-					</figcaption>
+					</figcaption>-->
 				</figure>
 			</div>
 
@@ -119,7 +119,6 @@
 					<img src="img/servicos/01452105078-Massa-Corrida-Acrilica.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Drywall (paredes)</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
@@ -128,16 +127,14 @@
 					<img src="img/servicos/teto-forro-decorado.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Teto de gesso decorado</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-12 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servico-pvc.html">
 					<img src="img/servicos/DSCN1862.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Rebaixamento de Pvc</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
@@ -148,7 +145,6 @@
 					<img src="img/servicos/pvc-decotativo.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Pvc decorativos</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
@@ -157,7 +153,6 @@
 					<img src="img/servicos/owa_foto5_g.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Forros removíveis</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
@@ -166,7 +161,6 @@
 					<img src="img/servicos/11752566_146395479025649_3723354704819076619_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Divisórias</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
@@ -177,7 +171,6 @@
 					<img src="img/servicos/18274919_463922507272943_7837062606207957635_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Iluminaçao led</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
@@ -186,7 +179,6 @@
 					<img src="img/servicos/lustre.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Lustres</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
@@ -195,7 +187,6 @@
 					<img src="img/servicos/stell-frame.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Stell Frame</h4>
-				<br><br>
 				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
@@ -377,8 +368,8 @@
 		<div class="row slideanim">
 			<div class="col-sm-8">
 				<h2 class="titulo-secao">Sobre Nós</h2>
-				<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>A HP PVC e DRYWALL é uma empresa especializada em FORROS de PVC, DRYWALL, EUCATEX, FORRO REMOVÍVEL e ILUMINAÇÃO,  com estratégias empresariais bem definidas, sempre priorizando os conceitos de qualidade, consolidando-se como uma empresa que tem em seu fundamento básico, o respeito e a satisfação plena de seus clientes.</p>
+				<p>A HP PVC e DRYWALL está sempre em busca de tecnologias, para aperfeiçoamento de seus serviços, com rigorosa responsabilidade com qualidade, prazos, preços e atendimento personalizado aos nossos clientes. Desta forma podemos afirmar que o nome A HP PVC e DRYWALL é sinônimo de qualidade, venha conferir!</p>
 			</div>
 			<div class="col-sm-4">
 				<span class="glyphicon glyphicon-signal logo"></span>
@@ -406,7 +397,7 @@
 		<div class="row">
 			<div class="col-sm-5 thumbnail">
 				<!-- Add Google Maps -->
-				<div id="hpGoogleMap" style="height:400px;width:100%;"></div>
+				<div id="hpGoogleMap" style="height:470px;width:100%;"></div>
 				<script>
 					myMap();
 				</script>
@@ -420,28 +411,31 @@
 						<div class="row">
 							<a href="#unidades" onclick="myMap(-22.608500, -43.183562)">
 								<div class="col-sm-12">
-									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
-									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, nº364 - Piabetá - RJ</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 3684-2332 / 97040-0169<span class="glyphicon glyphicon-envelope unidade-email-maps"></span> contatohpdrywall@gmail.com</p>
+									<p>Seg a Sex 08:00 as 18:00 / Sab 08:00 as 12:00</p>
 								</div>
 							</a>
 						</div>
 					</li>
 					<li>
 						<div class="row">
-							<a href="#unidades" onclick="myMap(-22.624414, -43.215556)">
+							<a href="#unidades" onclick="myMap(-22.610872, -43.195232)">
 								<div class="col-sm-12">
-									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
-									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Automóvel Clube KM 58 n°513  - Parque Caçula - RJ</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 3656-3408 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> contatohpdrywall@gmail.com</p>
+									<p>Seg a Sex 08:00 as 18:00 / Sab 08:00 as 12:00</p>
 								</div>
 							</a>
 						</div>
 					</li>
 					<li>
 						<div class="row">
-							<a href="#unidades" onclick="myMap(-22.835922, -43.314328)">
+							<a href="#unidades" onclick="myMap(-22.641072, -43.218807)">
 								<div class="col-sm-12">
-									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
-									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+									<p><span class="glyphicon glyphicon-map-marker"></span> Rua Coronel Sisson n° 727 Loja 01  - Imbariê - RJ</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 2777-2979 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> contatohpdrywall@gmail.com</p>
+									<p>Seg a Sex 08:00 as 18:00 / Sab 08:00 as 13:00</p>
 								</div>
 							</a>
 						</div>
