--- a/servico-drywall.html
+++ b/servico-drywall.html
@@ -32,7 +32,7 @@
 		<nav id="hpMainNav" class="navbar navbar-inverse navbar-dark navbar-expand-lg navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<span id="link-hpPage"><a class="navbar-brand" href="index.html#hpPage">HP Serviços e Manutenção</a></span>
+					<span id="link-hpPage"><a class="navbar-brand" href="index.html#hpPage"><img id="logo-hp" src="img/capa/logo-hp.png" class="img-logo" alt="Logo HP Drywall"></a></span>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hpNavbar">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -52,10 +52,24 @@
 		</nav>
 	</header>
 
-	<section id="servico-drywall" class="container-fluid text-center">
-		<h2 class="titulo-secao">Drywall(Paredes)</h2>
-		<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	<section id="servico-drywall" class="container-fluid">
+		<h2 class="titulo-secao text-center">Drywall</h2>
+		<div class="container-fluid">
+			<p>O drywall é o que há de mais moderno no mercado, quando falamos de método construtivo, conhecido também como o gesso acartonado; Consiste em fixação de chapas de gesso acartonado em perfis metálicos ou em estrutura de ferro ou madeira que irão produzir paredes de forma rápida e resistente para seus ambientes internos.</p>
+			<p>As paredes de Drywall podem se adequar a necessidade do cliente, fazendo assim paredes com isolamento acústico, termoacústico, parede resistente ao fogo, resistente a umidade e paredes que podem ser aplicados revestimentos de qualquer espécie como nas paredes de alvenaria convencional.</p>
+			<p>Diferente do que as pessoas acham drywall não é divisória!</p>
+			<p>Drywall consiste na construção de paredes, como o termo diz drywall no inglês significa ‘’parede seca’’.</p>
+			<p>Nos Estados Unidos em toda Europa este método já é utilizado a mais de cem anos chegando para nós aqui no Brasil há aproximadamente 15 anos, sendo  regulamentado no ano de 2009. (NBR15.578)</p>
+			<p>Como tudo que é novo no mercado alguns clientes oferecem ainda alguma resistência para adquirir esse tipo de serviço não conhecendo as suas vantagens e tamanha a eficácia da produção de paredes de Drywall.</p>
+			O drywall irá proporcionar para você:
+			<ul>
+				<li>Uma obra mais rápida</li>
+				<li>Mais limpa</li>
+				<li>Com fidelidade orçamentária</li>
+			</ul>
+			<p>Você poderá nas paredes de Drywall passar tubulações hidráulicas e elétricas assim como nas paredes de alvenaria.</p>
+			<p>Os reparos feitos nas paredes de Drywall são reparos muito mais lindos que não ocasionaram entulho muito menos barulho para fazer Tais reparos nas instalações elétricas e hidráulicas quando necessários.</p>
+		</div>
 	</section>
 	
 	<section id="galeria-servico-drywall" class="container-fluid text-center bg-grey">
@@ -64,7 +78,6 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h4 class="titulo-servico">GALERIA DE FOTOS - DRYWALL</h4>
-					<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
 				</div>
 			</div>
 
@@ -75,8 +88,8 @@
 						<ul class="ace-thumbnails clearfix">
 							<!-- #section:pages/gallery -->
 							<li>
-								<a href="img/servicos-galerry/image-1.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-1.jpg" />
+								<a href="img/galeria-drywall/04.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/04.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -84,8 +97,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-2.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-2.jpg" />
+								<a href="img/galeria-drywall/7paredes-em-dry-wall2.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/7paredes-em-dry-wall2.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -93,8 +106,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-3.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-4.jpg" />
+								<a href="img/galeria-drywall/149-divisoria-drywall-90mm-3.png" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/149-divisoria-drywall-90mm-3.png" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -102,8 +115,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-4.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-4.jpg" />
+								<a href="img/galeria-drywall/50647_824560_7ed6b7.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/50647_824560_7ed6b7.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -111,8 +124,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-5.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-5.jpg" />
+								<a href="img/galeria-drywall/01452105078-Massa-Corrida-Acrilica.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/01452105078-Massa-Corrida-Acrilica.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -120,8 +133,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-6.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-6.jpg" />
+								<a href="img/galeria-drywall/313968998662014-07-04-04-44-26.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/313968998662014-07-04-04-44-26.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -129,8 +142,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-1.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-1.jpg" />
+								<a href="img/galeria-drywall/divisoria-dry-wall-4.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/divisoria-dry-wall-4.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -138,8 +151,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-2.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-2.jpg" />
+								<a href="img/galeria-drywall/divisoria-em-drywall_93887.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/divisoria-em-drywall_93887.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -147,8 +160,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-3.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-4.jpg" />
+								<a href="img/galeria-drywall/divisoria-em-drywall-apos-pintura_93891.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/divisoria-em-drywall-apos-pintura_93891.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -156,8 +169,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-4.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-4.jpg" />
+								<a href="img/galeria-drywall/divisrias_drywall_20140120_1212113409.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/divisrias_drywall_20140120_1212113409.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -165,8 +178,8 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-5.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-5.jpg" />
+								<a href="img/galeria-drywall/drywall-e-vidro.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/drywall-e-vidro.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -174,8 +187,80 @@
 							</li>
 
 							<li>
-								<a href="img/servicos-galerry/image-6.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="img/servicos-galerry/thumb-6.jpg" />
+								<a href="img/galeria-drywall/drywall-com-vidro4.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/drywall-com-vidro4.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/drywall-com-vidro5.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/drywall-com-vidro5.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/Forros-em-Guaruja-Parede-de-Gesso-Acartonado-1.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/Forros-em-Guaruja-Parede-de-Gesso-Acartonado-1.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/foto3.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/foto3.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/fotos-servicos-20150116_0434122979113.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/fotos-servicos-20150116_0434122979113.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/IMG0315.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/IMG0315.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/IMG00333.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/IMG00333.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/paredes-de-gesso-divisorias-e-forros-em-drywall-pisosetc-13152-MLB20073300239_042014-F.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/paredes-de-gesso-divisorias-e-forros-em-drywall-pisosetc-13152-MLB20073300239_042014-F.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="img/galeria-drywall/Paredes-de-Gesso-Sistema-Drywall.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="img/galeria-drywall/Paredes-de-Gesso-Sistema-Drywall.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
