Atualizacao do projeto 13/12/2017

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="img/ico/hp_icon.jpg">
+	<link rel="shortcut icon" href="img/ico/hp-logo-icon.ico">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
 				<div class="collapse navbar-collapse" id="hpNavbar">
 					<ul class="nav navbar-nav navbar-right ml-auto">
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#servicos">SERVIÇOS</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">PORTFÓLIO</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#televendas">TELEVENDAS</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre-nos">SOBRE NÓS</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#unidades">UNIDADES</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contato">CONTATO</a></li>
@@ -115,7 +115,7 @@
 
 		<div class="row slideanim">
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-drywall.html">
 					<img src="img/servicos/01452105078-Massa-Corrida-Acrilica.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Drywall (paredes)</h4>
@@ -123,7 +123,7 @@
 			</div>
 
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-gesso-decorado.html">
 					<img src="img/servicos/teto-forro-decorado.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Teto de gesso decorado</h4>
@@ -131,7 +131,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-4">
-				<a href="servico-pvc.html">
+				<a href="servicos/servico-pvc.html">
 					<img src="img/servicos/DSCN1862.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Rebaixamento de Pvc</h4>
@@ -141,7 +141,7 @@
 
 		<div class="row slideanim">
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-drywall.html">
 					<img src="img/servicos/pvc-decotativo.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Pvc decorativos</h4>
@@ -149,7 +149,7 @@
 			</div>
 
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-drywall.html">
 					<img src="img/servicos/owa_foto5_g.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Forros removíveis</h4>
@@ -157,7 +157,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-divisorias.html">
 					<img src="img/servicos/11752566_146395479025649_3723354704819076619_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Divisórias</h4>
@@ -167,7 +167,7 @@
 
 		<div class="row slideanim">
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-iluminacao.html">
 					<img src="img/servicos/18274919_463922507272943_7837062606207957635_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Iluminaçao led</h4>
@@ -175,7 +175,7 @@
 			</div>
 
 			<div class="col-sm-6 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-lustres.html">
 					<img src="img/servicos/lustre.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Lustres</h4>
@@ -183,7 +183,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-4">
-				<a href="servico-drywall.html">
+				<a href="servicos/servico-drywall.html">
 					<img src="img/servicos/stell-frame.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Stell Frame</h4>
@@ -204,65 +204,65 @@
 		</div>
 	</div>
 
-	<section id="portfolio" class="container-fluid bg-grey text-center">
+	<section id="televendas" class="container-fluid bg-grey text-center">
 		<div class="row">
 			<div class="col-sm-12">
-				<h2 class="titulo-secao">PORTFÓLIO</h2>
-				<h3 class="subtitulo-secao">Lorem ipsum dolor sit amet consectetur.</h3>
+				<h2 class="titulo-secao">TELEVENDAS</h2>
+				<h3 class="subtitulo-secao">Entre em contato conosco através do telefone <span class="text-red"><strong>21 3684-2332</strong></span> e faça o seu pedido.</h3>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row slideanim">
-				<div class="col-sm-6 col-md-4 portfolio-item">
+				<div class="col-sm-6 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal1">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/023.jpg" alt="Portifólio 1">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Forro Flutuante</h4>
+						<figcaption class="televendas-caption">
+							<h4>Produtos Eróticos</h4>
 							<p class="text-muted">Muito Foda</p>
 						</figcaption>
 					</figure>
 				</div>
 
-				<div class="col-sm-6 col-md-4 portfolio-item">
+				<div class="col-sm-6 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal2">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal2">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 2">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Forro Decorativo</h4>
+						<figcaption class="televendas-caption">
+							<h4>Drogas Ilícitas</h4>
 							<p class="text-muted">Eu sou Pica</p>
 						</figcaption>
 					</figure>
 				</div>
 
-				<div class="col-sm-12 col-md-4 portfolio-item">
+				<div class="col-sm-12 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal3">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal3">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/gesso-ou-drywall.jpg" alt="Portifólio 3">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Gesso ou Drywall</h4>
+						<figcaption class="televendas-caption">
+							<h4>Iluminação</h4>
 							<p class="text-muted">Puta que Pariu</p>
 						</figcaption>
 					</figure>
@@ -270,55 +270,55 @@
 			</div>
 
 			<div class="row slideanim">
-				<div class="col-sm-6 col-md-4 portfolio-item">
+				<div class="col-sm-6 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal4">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal4">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/residencial.jpg" alt="Portifólio 4">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Residencial</h4>
+						<figcaption class="televendas-caption">
+							<h4>Placas de PVC</h4>
 							<p class="text-muted">Barba Cabelo e Bigode</p>
 						</figcaption>
 					</figure>
 				</div>
 
-				<div class="col-sm-6 col-md-4 portfolio-item">
+				<div class="col-sm-6 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal5">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal5">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/023.jpg" alt="Portifólio 5">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Forro Flutuante</h4>
+						<figcaption class="televendas-caption">
+							<h4>Gesso Acartonado</h4>
 							<p class="text-muted">Muito Foda</p>
 						</figcaption>
 					</figure>
 				</div>
 
-				<div class="col-sm-12 col-md-4 portfolio-item">
+				<div class="col-sm-12 col-md-4 televendas-item">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal6">
-							<div class="portfolio-hover">
-								<div class="portfolio-hover-content">
+						<a class="televendas-link" data-toggle="modal" href="#hpPortfolioModal6">
+							<div class="televendas-hover">
+								<div class="televendas-hover-content">
 									<i class="fa fa-arrow-circle-right icon-3x"></i>
 									<p>Clique para saber mais...</p>
 								</div>
 							</div>
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 6">
 						</a>
-						<figcaption class="portfolio-caption">
-							<h4>Forro Decorativo</h4>
+						<figcaption class="televendas-caption">
+							<h4>Elétrica</h4>
 							<p class="text-muted">Eu sou Pica</p>
 						</figcaption>
 					</figure>
@@ -706,7 +706,7 @@
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>	
+	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
